# math-with-python

./: README.md  pyproject.toml
descriptive-stats/: README.md  main.py  random_data_generator.py
descriptive-stats/dispersion/: main.py
descriptive-stats/iqr/: test_iqr.py
descriptive-stats/random-data/: main.py
math/algebra/polynomials/: README.md  main.py  polynomial_addition.html
math/algebra/properties/: README.md  exercise_difference.html  exercise_result.html  main.py
math/calculus/derivatives/: README.md  derivatives.py  main.py
math/calculus/integrals/: README.md  integrals.py  main.py
math/calculus/limits/: README.md  limits.py  main.py
math/linear_algebra/eigen/: README.md  eigen.py  main.py
math/linear_algebra/matrices/: README.md  main.py  matrices.py
math/linear_algebra/vectors/: README.md  main.py  vectors.py
stats/descriptive-stats/central_tendency/: README.md  central_tendency.py  main.py
stats/descriptive-stats/dispersion/: README.md  dispersion.py  main.py
stats/descriptive-stats/iqr/: README.md  iqr.py  main.py
stats/descriptive-stats/qq_plots/: README.md  main.py  qq_plot.py
stats/descriptive-stats/random_data/: README.md  main.py  random_data_generator.py
stats/inferential-stats/correlation/: README.md  correlation.py  main.py
stats/inferential-stats/hypothesis_testing/: README.md  hypothesis_testing.py  main.py
stats/inferential-stats/regression/: README.md  main.py  regression.py
