[tool.poetry]
name = "math-with-python"
version = "0.1.0"
description = "Modern math and statistic strategies with Python"
authors = ["Sal <msalanvarov@gmail.com>"]
readme = "README.md"
packages = [{include = "math_with_python"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
statsmodels = "^0.14.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
